--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"prisma": "^5.10.2",
 		"svelte": "^4.2.7",
+		"svelte-headless-table": "^0.18.2",
 		"tailwindcss": "^3.4.1",
 		"vite": "^5.0.3"
 	},
@@ -35,7 +36,15 @@
 	"dependencies": {
 		"@lucia-auth/adapter-prisma": "^4.0.1",
 		"@prisma/client": "^5.10.2",
+		"bits-ui": "^0.20.0",
+		"clsx": "^2.1.0",
 		"dotenv": "^16.4.5",
-		"oslo": "^1.1.3"
+		"lucide-svelte": "^0.302.0",
+		"mode-watcher": "^0.3.0",
+		"oslo": "^1.1.3",
+		"radix-svelte": "^0.9.0",
+		"svelte-radix": "^1.1.0",
+		"tailwind-merge": "^2.2.2",
+		"tailwind-variants": "^0.2.1"
 	}
 }
