--- a/package.json
+++ b/package.json
@@ -34,13 +34,15 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@internationalized/date": "^3.5.2",
 		"@lucia-auth/adapter-prisma": "^4.0.1",
 		"@prisma/client": "^5.10.2",
 		"bits-ui": "^0.20.1",
 		"clsx": "^2.1.0",
 		"cmdk-sv": "^0.0.16",
+		"d3-scale": "^4.0.2",
 		"dotenv": "^16.4.5",
-		"lucide-svelte": "^0.302.0",
+		"lucide-svelte": "^0.363.0",
 		"mode-watcher": "^0.3.0",
 		"oslo": "^1.1.3",
 		"radix-svelte": "^0.9.0",
