--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"oslo": "^1.1.3",
 		"radix-svelte": "^0.9.0",
 		"svelte-radix": "^1.1.0",
+		"svelte-sonner": "^0.3.20",
 		"tailwind-merge": "^2.2.2",
 		"tailwind-variants": "^0.2.1"
 	}
