--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"svelte-radix": "^1.1.0",
 		"svelte-sonner": "^0.3.20",
 		"tailwind-merge": "^2.2.2",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"vaul-svelte": "^0.3.0"
 	}
 }
