--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.0",
 		"@types/node": "^20.11.25",
+		"@types/web-push": "^3.6.3",
 		"autoprefixer": "^10.4.18",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -50,6 +51,7 @@
 		"svelte-sonner": "^0.3.20",
 		"tailwind-merge": "^2.2.2",
 		"tailwind-variants": "^0.2.1",
-		"vaul-svelte": "^0.3.0"
+		"vaul-svelte": "^0.3.0",
+		"web-push": "^3.6.7"
 	}
 }
